feat: confirmar recogida (B21)
